<?xml version="1.0"?>
<package format="2">
  <name>scout_base</name>
  <version>0.2.1</version>
  <description>
    The package for Scout base system
  </description>
  <maintainer email="shlee@roas.co.kr">Brighten Lee</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>controller_manager</depend>
  <depend>realtime_tools</depend>
  <depend>std_srvs</depend>
  <depend>std_msgs</depend>
  <depend>scout_lib</depend>
  <depend>scout_msgs</depend>
</package>
