<?xml version="1.0"?>
<package format="2">
  <name>scout_control</name>
  <version>0.2.0</version>
  <description>
    The controller package for Scout
  </description>
  <maintainer email="shlee@roas.co.kr">Brighten Lee</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>ros_controllers</depend>
  <depend>twist_mux</depend>
  <depend>robot_localization</depend>
</package>