<?xml version="1.0"?>
<package format="2">
  <name>scout_description</name>
  <version>0.2.2</version>
  <description>
    This package includes urdf files of Scout
  </description>
  <maintainer email="shlee@roas.co.kr">Brighten Lee</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>
</package>