<?xml version="1.0"?>
<package format="2">
  <name>scout_lib</name>
  <version>0.2.1</version>
  <description>
    The libraries for control and communication
  </description>
  <maintainer email="shlee@roas.co.kr">Brighten Lee</maintainer> 
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend> 

  <depend>roscpp</depend>
  <depend>controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend>can_msgs</depend>
  <depend>socketcan_interface</depend>
  <depend>rosconsole_bridge</depend>
</package>
