<?xml version="1.0"?>
<package format="2">
  <name>scout_msgs</name>
  <version>0.2.1</version>
  <description>
    The messages for Scout
  </description>
  <maintainer email="shlee@roas.co.kr">Brighten Lee</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
</package>