<?xml version="1.0"?>
<package format="2">
  <name>scout_navigation</name>
  <version>0.2.0</version>
  <description>
    This package includes launch files for slam and navigation
  </description>
  <maintainer email="shlee@roas.co.kr">Brighten Lee</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend> 

  <depend>navigation</depend>
  <depend>teb_local_planner</depend>
  <depend>slam_toolbox</depend>

</package>